--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,47 +1,30 @@
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-set-option -g default-terminal "screen-256color"
-set -s escape-time 0
+set-option -g default-terminal screen-256color
+# set -s escape-time 0
 set -g mouse on
 
-set -g status-bg "#333333"
-set -g status-fg "#EEEEEE"
+set -g status-bg black
+set -g status-fg white
 set -g status-right-length 60
 set -g status-right "#(whoami)@#H %d %b %R "
 
-bind-key -n ^ last-window
-bind-key -n F2 new-window -c "#{pane_current_path}" \; rename-window "-"
-bind-key -n C-F2 display-panes \; split-window -h -c "#{pane_current_path}"
-bind-key -n S-F2 display-panes \; split-window -v -c "#{pane_current_path}"
-bind-key -n C-S-F2 new-session \; rename-window "-"
-bind-key -n F3 previous-window
-bind-key -n F4 next-window
-bind-key -n M-Left previous-window
-bind-key -n M-Right next-window
-bind-key -n M-Up switch-client -p
-bind-key -n M-Down switch-client -n
-bind-key -n S-F3 display-panes \; select-pane -t :.-
-bind-key -n S-F4 display-panes \; select-pane -t :.+
-bind-key -n S-Up display-panes \; select-pane -U
-bind-key -n S-Down display-panes \; select-pane -D
-bind-key -n S-Left display-panes \; select-pane -L
-bind-key -n S-Right display-panes \; select-pane -R
-bind-key -n C-F3 display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
-bind-key -n C-F4 display-panes \; swap-pane -s :. -t :.+ \; select-pane -t :.+
-bind-key -n C-S-F3 swap-window -t :-1 -d
-bind-key -n C-S-F4 swap-window -t :+1 -d
-bind-key -n M-S-Up resize-pane -U
-bind-key -n M-S-Down resize-pane -D
-bind-key -n M-S-Left resize-pane -L
-bind-key -n M-S-Right resize-pane -R
-bind-key -n C-F6 kill-pane
-bind-key -n F7 copy-mode
-bind-key -n M-NPage copy-mode \; send-keys NPage
-bind-key -n M-PPage copy-mode \; send-keys PPage
-bind-key -n F8 command-prompt -p "(rename-window) " "rename-window '%%'"
-bind-key -n C-F8 command-prompt -p "(rename-session) " "rename-session '%%'"
-bind-key -n S-F8 next-layout
-bind-key -n M-F9 display-panes \; setw synchronize-panes
-bind-key -n M-F11 break-pane
-bind-key -n C-F11 join-pane -h -s :. -t :-1
-bind-key -n S-F11 resize-pane -Z
+setw -g monitor-activity on
+set -g visual-activity on
+
+bind-key : command-prompt
+
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key C-o resize-pane -Z
+
+bind-key C-p last-pane
+bind-key C-b last-window
+bind-key q display-panes
+bind-key C-t new-window
+bind-key t next-window
+bind-key T previous-window
