--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 set-option -g default-terminal screen-256color
 # set -s escape-time 0
 set -g mouse on
+set -g base-index 1
 
 set -g status-bg black
 set -g status-fg white
