Overriden tmux binding
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,5 +20,6 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key C-b last-window
 bind-key t next-window
 bind-key T previous-window
