Move ft-specific opts from autocmds to ftplugin
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,14 +12,8 @@ set -g status-right "#(whoami)@#H %d %b %R "
 
 setw -g monitor-activity on
 set -g visual-activity on
+set -g detach-on-destroy off
+set -g status-keys vi
 
 bind-key v split-window -h
 bind-key s split-window -v
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-bind-key C-b last-window
-bind-key t next-window
-bind-key T previous-window
