--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 set-option -g default-terminal screen-256color
-# set -s escape-time 0
+set -s escape-time 0
 set -g mouse on
 set -g base-index 1
 
@@ -14,6 +14,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 set -g detach-on-destroy off
 set -g status-keys vi
+set -g mode-keys vi
 
 bind-key v split-window -h
 bind-key s split-window -v
