--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,7 @@ set -g status-right "#(whoami)@#H %d %b %R "
 setw -g monitor-activity on
 set -g visual-activity on
 set -g detach-on-destroy off
+set -g renumber-windows on
 set -g status-keys vi
 set -g mode-keys vi
 
