Separate concerns of telescope and its extensions
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,5 +17,6 @@ set -g renumber-windows on
 set -g status-keys vi
 set -g mode-keys vi
 
+bind-key C-b last-window
 bind-key v split-window -h
 bind-key s split-window -v
