--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,5 @@
-[user]
-	email = miroslav.kovar@absa.africa
-	name = Miroslav Kovar
-	signingkey = 8570BDFA37C78FEF
+[include]
+  path = ~/.gitconfig_env
 [color]
   ui = auto
 [alias]
