Install leap, modify prompt appearance, add tmux plugins, add parameter-related treesitter-objects keybindings
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,16 @@ set -g detach-on-destroy off
 set -g renumber-windows on
 set -g status-keys vi
 set -g mode-keys vi
+set -g automatic-rename on
+set -g automatic-rename-format '#{b:pane_current_path}'
 
 bind-key C-b last-window
 bind-key v split-window -h
 bind-key s split-window -v
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-ressurect'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+
+run '~/.tmux/plugins/tpm/tpm'
