--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 set-option -g default-terminal screen-256color
+set -g default-shell /bin/bash
 set -s escape-time 0
 set -g mouse on
 set -g base-index 1
