tmux window swap binding, rust-analyzer disable allTargets
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,8 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 bind-key C-b last-window
 bind-key v split-window -h
 bind-key s split-window -v
+bind-key S-Left swap-window -t -1
+bind-key S-Right swap-window -t +1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
