--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,7 +29,7 @@
   last = log -1 HEAD
 [core]
   excludesfile = ~/.gitignore_global
-  autocrlf = input
+	autocrlf = input
   safecrlf = true
   editor = nvim
 [pull]
@@ -79,3 +79,6 @@
 	sort = -committerdate
 [column]
 	ui = auto
+[http]
+  postBuffer = 52428800
+  followRedirects = true
