Use Ss and Se capabilities from terminfo for output terminal to change cursor shape in neovim
Signed-off-by: Miroslav Kovar <miroslavkovar@protonmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,8 @@ set -g mode-keys vi
 set -g automatic-rename on
 set -g automatic-rename-format '#{b:pane_current_path}'
 
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
 bind-key C-b last-window
 bind-key v split-window -h
 bind-key s split-window -v
